src/scss/_layout.scss
.material-icons {
    font-size: 1em;
}

.main {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
    overflow: hidden;
    font-family: 'Roboto', sans-serif;
    
    .sidebar {
        display: flex;
        flex-direction: column;
        flex-shrink: 0;
        min-width: 10em;
        max-width: 16em;
        width: 70%;
        padding: 0.4em 0;

        background: $sidebar-bg;
        color: $sidebar-fg;

        .sidebar-collection {
            display: flex;
            flex-direction: column;
            margin: 0.4em 0;

            .collection-info {
                font-size: 0.8em;
                padding: 0 0.5em;
                display: flex;
                flex-direction: row;
                align-items: center;

                .icon {
                    margin-right: 0.4em;
                }
            }

            .collection-items {
                display: flex;
                flex-direction: column;

                .collection-item {
                    display: flex;
                    flex-direction: row;
                    align-items: center;
                    padding: 0.5em 0.7em;
                    background: inherit;

                    &:hover {
                        background: rgba(255, 255, 255, 0.1);
                        transition: background-color 0.2s ease-in-out;
                        cursor: pointer;
                    }

                    .name {
                        padding-left: 0.7em;
                    }
                }
            }
        }
    }

    .browser {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        min-width: 0;

        .navigation-bar {
            display: flex;
            flex-direction: row;
            padding: 1em 0;
            align-items: center;

            background: $nav-bg;
            color: $nav-fg;

            .nav-button {
                background: transparent;
                color: $nav-fg;
                border: 0;
                font-size: 1.3em;
                margin: 0 0.4em;
                position: relative;
                cursor: pointer;
                outline: none;

                &:hover::before {
                    width: 1.6em;
                    height: 1.6em;
                    left: -0.025em;
                    top: -0.3em;
                    border-radius: 50%;
                    background: rgba(255, 255, 255, 0.2);
                    content: "";
                    display: inline-block;
                    position: absolute;
                }
            }

            .path-input {
                display: inline-flex;
                flex-grow: 1;

                &.hidden {
                    display: none;
                    flex-grow: 0;
                    width: 0px;
                }
            }

            .path {
                display: inline-flex;
                flex-direction: row;
                flex-grow: 1;
                flex-shrink: 1;

                &.hidden {
                    display: none;
                }

                .path_part {
                    color: $nav-path-fg;
                    font-size: 0.8em;
                    transition: color 0.2s ease-in-out;

                    &:hover {
                        transition: color 0.2s ease-in-out;
                        color: lighten($nav-path-fg, 20%);
                        cursor: pointer;
                    }

                    &:active {
                        transition: color 0.05s ease-in-out, transform 0.1s ease-in-out;
                        color: darken($nav-path-fg, 20%);
                    }
    
                    &:not(:first-of-type)::before {
                        color: $nav-path-fg;
                        margin: 0.2em 0.2em;
                        font-family: 'Material Icons';
                        content: "arrow_right";
                        vertical-align: -20%;
                    }
                }
            }
        }

        .directory-contents {
            overflow-y: scroll;
            flex-grow: 1;

            .directory-item {
                display: flex;
                flex-direction: row;
                padding: 0.5em 0.7em;
                align-items: center;
                transition: background-color 0.1s ease-in-out;
                overflow: hidden;

                &:hover {
                    background: rgba(0, 0, 0, 0.1);
                    transition: background-color 0.1s ease-in-out;
                    cursor: pointer;
                }

                &:active {
                    background: rgba(0, 0, 0, 0.3);
                    transition: background-color 0.05s ease-in-out;
                }
                
                .name {
                    padding: 0 0.7em;
                    flex-grow: 1;
                    flex-shrink: 1;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                    overflow: hidden;
                }

                .cdate {
                    flex-shrink: 0;
                    font-size: 0.7em;
                    color: $text-secondary;
                    align-self: flex-end;
                }

            }
        }
    }
}

